# METR4202

./: .gitignore  LICENSE.txt  Meeting.md  README.md  XimeaLICENSE.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
scripts/: configure.bash  setup.bash
src/carousel/: CMakeLists.txt  package.xml
src/carousel/launch/: carousel.launch  carousel_catch.launch  carousel_throw.launch
src/carousel/scripts/: Analytical_IK.py  camera.py  carousel.py  colour.py  effector.py  gripper.py  kinematics.py  time.py  topics.py  trajectory.py  transformer.py
src/carousel/scripts/nodes/: camera.py  carousel.py  gripper.py  poser.py  trajectory.py  transformer.py
src/carousel/scripts/utility/: kinematics.py  robot.py  statemachine.py  topics.py  trajectory.py
src/metr4202_ximea_ros/ximea_color/src/: ximea_color_detect.cpp
src/metr4202_ximea_ros/ximea_ros/launch/: ximea_aruco.launch
src/metr4202_ximea_ros/ximea_ros/src/: ximea_demo.cpp
src/time/: CMakeLists.txt  package.xml
