<?xml version="1.0"?>
<package format="2">
  <name>carousel</name>
  <version>1.0.0</version>
  <description>Package for controlling a 4R cube picking up robot.</description>

  <maintainer email="s4528652@students.uq.edu.au">root</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Dependencies. -->
  <depend>ximea_ros</depend>
  <depend>aruco_detect</depend>
  <depend>dynamixel_interface</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>fiducial_msgs</depend>

  <export>
  </export>
</package>
