<?xml version="1.0"?>
<package format="2">

    <!-- Name of the package -->
    <name>time</name>

    <!-- Metadata about the package. -->
    <version>0.0.1</version>
    <description>A package that publishes the current time.</description>
    <maintainer email="root@todo.todo">root</maintainer>
    <license>TODO</license>

    <!-- Dependencies -->
    <buildtool_depend>catkin</buildtool_depend>

</package>
